<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mirza Ghalib College</string>

    <string name="bold" tools:ignore="ReferenceType">@font/font_bold</string>
    <string name="regular" tools:ignore="ReferenceType">@font/font_regular</string>
    <string name="light" tools:ignore="ReferenceType">@font/font_light</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notice">Notice</string>
    <string name="faculty">Faculty</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>

    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="developer">Developer</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="website">Website</string>
    <string name="theme">Theme</string>
    <string name="pdf">Pdf</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="naac_accredited_grade_b">NAAC ACCREDITED GRADE -\'B\'</string>
    <string name="discover_more">Discover More</string>
    <string name="department">Department</string>
    <string name="activity">Activity</string>
    <string name="feedback">Feedback</string>
    <string name="admission">Admission</string>
    <string name="search">Search</string>
    <string name="search_for_notice">Search for Notice</string>
    <string name="developed_by_n_aman_kumar">Developed By:\n Aman Kumar</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="email">Email</string>
    <string name="cv">CV</string>
    <string name="mobile_no">Mobile No</string>
    <string name="full_address">Full Address</string>
    <string name="specialization_in_teaching">Specialization in teaching</string>
    <string name="qualification">Qualification</string>


    <string name="admission_link">https://mirzaghalibcollegegaya.ac.in/?pg=all%20courses</string>
    <string name="student_feedback_link">https://docs.google.com/forms/d/e/1FAIpQLSeVitKN4DEmbTtHOTisjxzYxdAP1eUR-UgDVXU6256THJc7uQ/viewform</string>
    <string name="parent_feedback_link">https://docs.google.com/forms/d/e/1FAIpQLSe8cX04GEpql9rrJrUGRmgkebCcBuXXz3UL8V4RwqEyWSkzHA/viewform</string>
    <string name="teacher_feedback_link">https://docs.google.com/forms/d/e/1FAIpQLSfR7sGjzzfrnwcdvsaCxTWugMKhcCUEZ_xd4mLJMA-317M9Hw/viewform</string>
    <string name="alumni_feedback_link">https://docs.google.com/forms/d/e/1FAIpQLSf67iylN99o4mz4C34aVK7bFBvuIajIIDCsjiwktOm3xEdJsw/viewform</string>
    <string name="valuable_feedback">Valuable Feedback</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="alumni">Alumni</string>
    <string name="parent">Parent</string>
    <string name="mirzaghalib_link">www.mirzaghalibcollegegaya.ac.in</string>
    <string name="linkedin">Linkedin</string>
    <string name="instagram">Instagram</string>
    <string name="insta_id">\@coder.aman</string>
    <string name="linkedin_id">aman-kumar-4aaa631b5</string>
    <string name="search_for_faculty">Search for faculty</string>
    <string name="mirza_ghalib_college">Mirza Ghalib College</string>
    <string name="history">History</string>
    <string name="governing_body">Governing\nBody</string>
    <string name="vision_amp_mission"><![CDATA[Vision & \nMission]]></string>
    <string name="rule_and_regulations"><![CDATA[Rule &\n Regulations]]></string>
    <string name="academic_calender">Academic\nCalender</string>
    <string name="academic_holiday">Academic\nHoliday</string>
    <string name="aman_kumar">Aman Kumar</string>

</resources>