<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/teacherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Aman Kumar"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teacherPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Principle"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circular_image"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="end"
                android:padding="10dp"
                android:src="@drawable/person_image" />

            </LinearLayout>
        </LinearLayout>

<!--        after click on teacher cardview-->

        <ScrollView
            android:id="@+id/teacherScroll"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teacherQualification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/qualification"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teacherSpecialize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/specialization_in_teaching"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teacherDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/department" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teacherAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/full_address"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teacherMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/mobile_no"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teacherEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/CVpdfSelector"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/cv"
                    android:background="@drawable/textbox"
                    app:drawableEndCompat="@drawable/pdf" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>